--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>By: @ViewData["Professor"]</p>
+
+<address>
+    <strong>More Information: </strong> <a href="https://culuxi.wixsite.com/diegoculuxi"> culuxi.com.br</a>
+</address>
+<p>@ViewData["Email"]</p>
